force-app/main/default/objects/Applicant__c/fields/Applicant_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Code__c</fullName>
    <label>Applicant Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>