force-app/main/default/objects/Applicant__c/fields/Is_On_Title__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Title__c</fullName>
    <label>Is On Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>